--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,18 +17,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Neptune-play-edc</h1>
-        <p class="header">Neptune Play Early Development Code, includes the java picture viewer, with the netbeans project, the vlcj media player and a jmf screen recorder.</p>
-
+        <h1>Neptune-play-edc</h1>
+        <p>Neptune Play Early Development Code, includes the java picture viewer, with the netbeans project, the vlcj media player and a jmf screen recorder.</p>
+        <p class="view"><a href="https://github.com/GreatArkStudios/Neptune-Play-EDC">View the Project on GitHub <small>GreatArkStudios/Neptune-Play-EDC</small></a></p>
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/GreatArkStudios/Neptune-Play-EDC/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/GreatArkStudios/Neptune-Play-EDC/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/GreatArkStudios/Neptune-Play-EDC">View On GitHub</a></li>
+          <li><a href="https://github.com/GreatArkStudios/Neptune-Play-EDC/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/GreatArkStudios/Neptune-Play-EDC/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/GreatArkStudios/Neptune-Play-EDC">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/GreatArkStudios">GreatArkStudios</a></p>
-
-
       </header>
       <section>
         <h3>
@@ -62,11 +59,12 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/GreatArkStudios">GreatArkStudios</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    
   </body>
 </html>
